fixed all weird images after wrapping

--- a/src/app/components/ImageText/ImageText.module.css
+++ b/src/app/components/ImageText/ImageText.module.css
@@ -168,7 +168,7 @@
   .image {
     max-width: 100%; /* Allow the image to take the full width in mobile layout */
     margin-right: 0; /* Remove margin for mobile layout */
-    padding: 2rem;
+    margin: 2rem;
   }
 
    .blueCircleWrapper {
