--- a/src/app/components/ImageWrapper/ImageWrapper.module.css
+++ b/src/app/components/ImageWrapper/ImageWrapper.module.css
@@ -1,3 +1,8 @@
+.image {
+    width: 100%;
+    height: 100%;
+}
+
 .background {
     background: #fff;
 }
